force-app/main/default/objects/Project__c/Project__c.object-meta.xml
<CustomObject>
    <description>Agoura Custom Object</description>
    <label>Project</label>
    <nameField>
        <displayFormat>PRJ-{0000000000}</displayFormat>
        <label>Project Unique Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>