force-app/main/default/objects/Project__c/fields/Constraints__c.field-meta.xml
<CustomField>
    <fullName>Constraints__c</fullName>
    <label>Constraints</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>