force-app/main/default/objects/Project__c/fields/Idea_Board__c.field-meta.xml
<CustomField>
    <fullName>Idea_Board__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Idea Board</label>
    <referenceTo>IdeaBoard__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>