force-app/main/default/objects/Project__c/fields/KPIs__c.field-meta.xml
<CustomField>
    <fullName>KPIs__c</fullName>
    <label>Key Performance Indicators (KPIs)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>