force-app/main/default/objects/Project__c/fields/Mission_Statement__c.field-meta.xml
<CustomField>
    <fullName>Mission_Statement__c</fullName>
    <label>Mission Statement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>