force-app/main/default/objects/Project__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>