force-app/main/default/objects/Project__c/fields/Project_Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>Project_Abbreviation__c</fullName>
    <inlineHelpText>All Project Tasks will begin with this abbreviation so it’s best to keep it short</inlineHelpText>
    <label>Project Abbreviation</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>