force-app/main/default/objects/Project__c/fields/Value_Trackers__c.field-meta.xml
<CustomField>
    <fullName>Value_Trackers__c</fullName>
    <label>Value Trackers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>